# AI-Phishing-Detection

./: .gitignore  README.md  env.py  openenv.yaml  requirements.txt
AI-Phishing-Detection-main/: Dockerfile  README.md  grader.py  inference.py  models.py  pyproject.toml
AI-Phishing-Detection-main/backend/: analyzer.py  app.py
AI-Phishing-Detection-main/frontend/: index.html  script.js  style.css
backend/: app.py
